<resources>
    <string name="app_name">Cinema Kita</string>
    <string name="todo">TODO</string>
    <string name="tittle">tittle</string>
    <string name="year">yyyy</string>
    <string name="category">Genres</string>
    <string name="synopsis">Sinopsis</string>
    <string name="synopsis_default">Lorem Ipsum Dolor Sit Amet</string>
    <string name="description">Description</string>
    <string name="release">Release :</string>
    <string name="genres">Genres :</string>
    <string name="rating">Rating :</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="rateNum">0.0</string>
    <string name="maxRate">/10</string>
    <string name="about">About</string>
    <string name="profile">Yogi Dwi Andrian</string>
    <string name="email">yogidwiandrian11@gmail.com</string>
</resources>
