<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#303239"
    app:cardCornerRadius="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        android:layout_height="280dp">

        <ImageView
            android:id="@+id/img_poster_movieCol"
            android:layout_width="140dp"
            android:layout_height="210dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_maxRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="#a2a2a8"
            android:text="@string/maxRate"
            android:textColor="#FFFFC107"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rateNum_movieCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#a2a2a8"
            android:text="@string/rateNum"
            android:textColor="#FFFFC107"
            app:layout_constraintEnd_toStartOf="@+id/tv_maxRate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tittle_movieCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tittle"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_movieCol" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tittle_movieCol" />

        <TextView
            android:id="@+id/tv_release_movieCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/year"
            android:textColor="#a2a2a8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>