<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2b31"
    tools:context=".ui.detail.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="WebViewLayout">

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tittle_moviedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webView" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_moviedetail" />

    <ImageView
        android:id="@+id/img_poster_moviedetail"
        android:layout_width="160dp"
        android:layout_height="240dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_1" />

    <TextView
        android:id="@+id/tv_synopsis_moviedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/synopsis"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/img_poster_moviedetail"
        app:layout_constraintTop_toBottomOf="@+id/view_1" />

    <TextView
        android:id="@+id/tv_synopsis_value_moviedetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:ellipsize="end"
        android:maxLines="12"
        android:text="@string/synopsis_default"
        android:textColor="#a2a2a8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster_moviedetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_moviedetail" />

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_moviedetail" />

    <TextView
        android:id="@+id/tv_description_moviedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_2" />

    <TextView
        android:id="@+id/tv_release_moviedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/release"
        android:textColor="#a2a2a8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_moviedetail" />

    <TextView
        android:id="@+id/tv_release_value_moviedetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textColor="#a2a2a8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_release_moviedetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_moviedetail" />

    <TextView
        android:id="@+id/tv_genres_moviedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/genres"
        android:textColor="#a2a2a8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_moviedetail" />

    <TextView
        android:id="@+id/tv_genres_value_moviedetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:maxLines="2"
        android:textColor="#a2a2a8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_genres_moviedetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_value_moviedetail" />

    <TextView
        android:id="@+id/tv_rating_moviedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/rating"
        android:textColor="#a2a2a8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genres_moviedetail" />

    <RatingBar
        android:id="@+id/rating_star_moviedetail"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:theme="@style/RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:max="10"
        android:numStars="5"
        android:rating="8.5"
        android:stepSize="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_rating_moviedetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_genres_value_moviedetail" />

    <TextView
        android:id="@+id/rating_num_moviedetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textColor="#a2a2a8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rating_star_moviedetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_genres_value_moviedetail" />


        <View
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_moviedetail" />

    <TextView
        android:id="@+id/popular_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/most_popular_movies"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_col"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/item_rvcol_movie"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>