<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="13dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="13dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="#303239"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="WebViewLayout">

        <WebView
            android:id="@+id/vid_background_movie"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginBottom="50dp"
            android:background="@android:color/holo_blue_dark"
            android:contentDescription="@string/todo"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/img_poster_movie"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/todo"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_tittle_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="40dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tittle"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/vid_background_movie"
            card_view:layout_constraintEnd_toEndOf="@+id/vid_background_movie"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_poster_movie" />

        <TextView
            android:id="@+id/tv_release_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:text="@string/year"
            card_view:layout_constraintBottom_toBottomOf="@+id/vid_background_movie"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_poster_movie"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_tittle_movie" />

        <RatingBar
            android:id="@+id/ratingBar_star_movie"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:max="10"
            android:numStars="5"
            android:rating="8.5"
            android:stepSize="0.5"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/img_poster_movie"
            card_view:layout_constraintStart_toStartOf="@+id/img_poster_movie"
            card_view:layout_constraintTop_toTopOf="@+id/img_poster_movie"
            card_view:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_genres_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/category"
            android:textColor="#a2a2a8"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/vid_background_movie"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_poster_movie"
            card_view:layout_constraintTop_toBottomOf="@+id/vid_background_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>